--- a/assets/components/ipsum.html
+++ b/assets/components/ipsum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>QCM - Qualiopy</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="d-flex flex-column align-items-center text-center p-1">
             
             <div class="container-img">
-                <img src="logo.png" alt="logo">
+                <img src="../img/logo.png" alt="logo">
             </div>
             <div class="wrapper">
                 <div class="d-flex justify-content-center">
@@ -252,7 +252,7 @@
      
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="index.js">
+    <script src="../js/index.js">
     </script>
 </body>
 </html>
