--- a/assets/components/qualiopy.html
+++ b/assets/components/qualiopy.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
      
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="../css/style.css">
      
     
      <title>QCM - Qualiopy</title>
@@ -318,8 +318,7 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="qualiopy.js"></script>
-    <script src="form.js"></script>
+    <script src="../js/form.js"></script>
     
  </body>
  </html>
