--- a/assets/components/ipsum.html
+++ b/assets/components/ipsum.html
@@ -253,8 +253,9 @@
         </div>
     </section>
      
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/form.js"></script>
     <script src="../js/index.js">
     </script>
 </body>
