--- a/assets/components/qualiopy.html
+++ b/assets/components/qualiopy.html
@@ -256,8 +256,8 @@
          </div>
      </section> 
     
-     <script src="node_modules/tarteaucitronjs/tarteaucitron.min.js"></script>
-    <script>
+     <!-- <script src="node_modules/tarteaucitronjs/tarteaucitron.min.js"></script> -->
+    <!-- <script>
         tarteaucitron.init({
     	  "privacyUrl": "", /* Url de la politique de confidentialité */
           "bodyPosition": "top", /* top place le bandeau de consentement au début du code html, mieux pour l'accessibilité */
@@ -315,10 +315,10 @@
         });
         tarteaucitron.user.googleFonts = 'roboto';
         (tarteaucitron.job = tarteaucitron.job || []).push('googlefonts');
-    </script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    </script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/form.js"></script>
+    <script src="../js/form.js"></script> -->
     
  </body>
  </html>
