--- a/assets/components/ipsum.html
+++ b/assets/components/ipsum.html
@@ -20,9 +20,9 @@
                     <!-- Formulaire 1 -->
                     <form id="form0" class="p-5">
                         <div class="d-flex flex-column">
-                            <input class="my-2 societe" type="text" value="societe" placeholder="Indiquez votre société" required />
-                            <input class="my-2 name" type="text" value="nom" placeholder="Nom" required>
-                            <input class="my-2 firstname" type="text" value="prenom" placeholder="Prénom" required>
+                            <input id="society" class="my-2 societe" type="text" placeholder="Indiquez votre société" required />
+                            <input id="name" class="my-2 name" type="text"  placeholder="Nom" required>
+                            <input id="firstname" class="my-2 firstname" type="text"  placeholder="Prénom" required>
                             <div class="alert-form" role="alert">
                             </div>
                             <button 
@@ -269,8 +269,8 @@
      
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="../js/form.js"></script> -->
-    <script src="../js/index.js">
-    </script>
+    <script src="../js/form.js"></script>
+    <script src="../js/index.js"></script>
+    
 </body>
 </html>
