commit form register

--- a/assets/components/ipsum.html
+++ b/assets/components/ipsum.html
@@ -19,7 +19,7 @@
                 <div class="d-flex justify-content-center">
                     <!-- Formulaire 1 -->
                     <form id="form0" class="p-5">
-                        <div class="d-flex flex-column">
+                        <div class="d-flex flex-column align-items-center">
                             <input id="society" class="my-2 societe" type="text" placeholder="Indiquez votre société" required />
                             <input id="name" class="my-2 name" type="text"  placeholder="Nom" required>
                             <input id="firstname" class="my-2 firstname" type="text"  placeholder="Prénom" required>
@@ -29,7 +29,7 @@
                                 id="questionNext0" 
                                 onclick=afficheFormulaire()
                                 type="button" 
-                                class="btn btn-primary">
+                                class="question ">
                                 Commencer
                             </button>
                         </div> 
